metadata/objects/fragment7__c.object
<CustomObject>
    <fields>
        <fullName>Formula50__c</fullName>
        <formula>true</formula>
        <label>Formula50</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula51__c</fullName>
        <formula>true</formula>
        <label>Formula51</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula52__c</fullName>
        <formula>true</formula>
        <label>Formula52</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea10__c</fullName>
        <label>LongTextArea10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea11__c</fullName>
        <label>LongTextArea11</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea1__c</fullName>
        <label>LongTextArea1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>fragment7</label>
    <nameField>
        <displayFormat>fragment7-{0000000}</displayFormat>
        <label>fragment7 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment7s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>